remove tooltip issue on mobile

--- a/src/theme.less
+++ b/src/theme.less
@@ -56,3 +56,10 @@ body {
     border-radius: 10px;
     box-shadow: 1px 1px 4px 4px rgb(215, 210, 210);
 }
+
+@media (max-width: 768px) {
+    .ant-tooltip {
+      display: none !important;
+    }
+  }
+  
